# chatbot2k

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE.txt  README.md  alembic.ini  compose.yml  entrypoint.sh  package-lock.json  package.json  pyproject.toml  translations.json
.github/workflows/: lint.yml  release-docker.yml
.run/: Main.run.xml  Run Tests.run.xml
frontend/: scripts_tab.js
migrations/: env.py
migrations/versions/: 1134d0b4c803_add_live_notification_channel_table.py  153518e030e6_add_soundboard_managed_via_web_ui_.py  174a7805e616_remove_broadcaster_name_from_.py  1e250ee04152_update_tables_to_use_correct_datetime_.py  4209530666cd_add_table_for_entrance_sounds.py  4ca9a33d065f_add_table_for_notifications.py  51019a3ea980_add_new_translation_key.py  584e818241dd_add_cannot_add_or_update_script_command_.py  5f9af2cc10f5_add_volume_to_soundboard_clips.py  61fd0edcab58_add_twitch_token_set_table.py  6a0fbce552ad_add_table_for_configuration_settings.py  813b0a6fbf32_rename_clip_url_to_filename_in_.py  8563357d6e5d_add_pending_soundboard_clips_.py  8fac49eb043c_store_both_broadcaster_name_and_id.py  902cb24ac436_revert_datetime_type_in_tables.py  90615bd027fd_baseline_schema.py  9701b4272c26_use_message_id_as_primary_key_for_.py  a9e93c8c6f82_create_table_for_raid_event_actions.py  bfd170595873_add_table_for_pending_soundboard_clips.py  (+5 more)
scripts/: check.py
src/chatbot2k/: __init__.py  app_state.py  (+21 more)
static/: commands.css  style.css
templates/: _macros.html  base.html  commands.html  error.html  imprint.html  login.html  overlay.html
(+130 files in other folders)
