[project]
name = "chatbot2k"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "babel>=2.17.0",
    "beautifulsoup4>=4.13.4",
    "bleach>=6.2.0",
    "discord-py>=2.6.0",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "markdown-it-py>=4.0.0",
    "markupsafe>=3.0.2",
    "pydantic>=2.11.7",
    "sqlmodel>=0.0.24",
    "twitchapi>=4.5.0",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "alembic>=1.16.5",
    "poethepoet>=0.37.0",
    "pyright[nodejs]>=1.1.407",
    "pytest>=8.4.2",
    "ruff>=0.12.9",
]

[tool.setuptools.package-data]
"chatbot2k" = ["py.typed"]

[tool.poe.tasks]
check = { cmd = "scripts/check.py" }
fix = { cmd = "scripts/check.py --fix" }
test = { cmd = "scripts/check.py --test" }

[project.scripts]
check = "chatbot2k:check"
fix = "chatbot2k:fix"
test = "chatbot2k:test"

[tool.ruff]
line-length = 120

[tool.ruff.format]
preview = false

[tool.ruff.lint]
preview = true
select = ["E", "W", "F", "I", "B", "C4", "UP", "E401", "ISC001", "ISC002"]
# https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
ignore = ["W191", "E111", "E114", "E117", "D206", "D300", "Q000", "Q001", "Q002", "Q003", "COM812", "COM819", "UP045"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.flake8-implicit-str-concat]
allow-multiline = false
